--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "psr/log": "~1.0.0"
+        "psr/log": "~1.0.0",
+        "doctrine/orm": "^2.5",
+        "smarty/smarty": "^3.1",
+        "twbs/bootstrap": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8.0",
@@ -17,6 +20,11 @@
     },
     "config": {
         "bin-dir": "bin"
+    },
+    "scripts": {
+        "post-update-cmd": [
+           "ln -sf vendor/twbs/bootstrap/dist/ src/public/bootstrap/"
+        ]
     },
     "autoload": {
         "psr-4": {
